implement title section in prodcut component

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,30 @@ body {
   overflow-x: hidden;
 }
 
+.row {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1440px;
+    position: relative
+}
+
+.title-lg{
+  font-size: 50px;
+}
+
+.button{
+  background-color: #fff;
+    color: #000!important;
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 22px;
+    margin-top: 10px;
+    padding: 8px 16px;
+    white-space: nowrap;
+    width: -moz-fit-content;
+    width: fit-content
+}
+
 @utility flex-center {
   @apply flex justify-center items-center;
 }
