--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,16 @@ body {
     z-index: 1
 }
 
+.heading-3 {
+    font-family: Inter, Times New Roman, arial, sans-serif;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 600;
+    letter-spacing: -2.25px;
+    line-height: 56px;
+    text-transform: none;
+}
+
 @utility flex-center {
   @apply flex justify-center items-center;
 }
