--- a/src/index.css
+++ b/src/index.css
@@ -25,50 +25,71 @@ body {
 }
 
 .row {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1440px;
-    position: relative
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1440px;
+  position: relative;
 }
 
-.title-lg{
+.title-lg {
   font-size: 50px;
 }
 
-.button{
+.button {
   background-color: #fff;
-    color: #000!important;
-    font-size: 13px;
-    font-weight: 500;
-    line-height: 22px;
-    margin-top: 10px;
-    padding: 8px 16px;
-    white-space: nowrap;
-    width: -moz-fit-content;
-    width: fit-content
+  color: #000 !important;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 22px;
+  margin-top: 10px;
+  padding: 8px 16px;
+  white-space: nowrap;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
-.product-comparison-block, .products-container, .product-card {
-    background: hsla(0,0%,100%,.02);
-    border: 1px solid #525252;
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    padding: 1px 0 24px;
-    position: relative;
-    transition: background .3s ease,border .3s ease-out;
-    width: calc(25% - 18px);
-    z-index: 1
+.product-comparison-block,
+.products-container,
+.product-card {
+  background: hsla(0, 0%, 100%, 0.02);
+  border: 1px solid #525252;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  padding: 1px 0 24px;
+  position: relative;
+  transition: background 0.3s ease, border 0.3s ease-out;
+  width: calc(25% - 18px);
+  z-index: 1;
 }
 
 .heading-3 {
-    font-family: Inter, Times New Roman, arial, sans-serif;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 600;
-    letter-spacing: -2.25px;
-    line-height: 56px;
-    text-transform: none;
+  font-family: Inter, Times New Roman, arial, sans-serif;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 600;
+  letter-spacing: -2.25px;
+  line-height: 56px;
+  text-transform: none;
+}
+
+.crypto-box {
+  position: relative;
+  display: inline-block;
+  color: white;
+  font-family: sans-serif;
+  font-weight: 600;
+  padding: 12px 20px;
+
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0.25) 0%,
+
+    rgba(0, 0, 0, 0) 100%
+  );
+
+  background-color: #1a1520;
+  overflow: hidden;
 }
 
 @utility flex-center {
