modify style of horizontal line in hero component

--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,7 @@ body {
   overflow: hidden;
 }
 
-.styles_line__xHTH_ {
+.styles_hero_circle_platform {
   width: 100%;
   max-width: 1082px;
   height: 4px;
