--- a/src/index.css
+++ b/src/index.css
@@ -7,21 +7,11 @@
   src: url("/fonts/Modern Negra Demo.ttf") format("truetype");
 }
 
-@theme {
-  --color-yellow: #e7d393;
-  --color-white-100: #efefef;
-  --font-sans: "Mona Sans", sans-serif;
-  --font-modern-negra: "Modern Negra", sans-serif;
-  --font-serif: "DM Serif Text", serif;
-}
-
 html,
 body {
   width: 100%;
   background-color: black;
   color: white;
-  scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 .row {
@@ -128,7 +118,7 @@ body {
       color(display-p3 0.5951 0.587 1) 90.51%
     );
 }
-
+/* 
 @utility flex-center {
   @apply flex justify-center items-center;
 }
@@ -478,4 +468,4 @@ body {
       @apply absolute bottom-0 right-0 lg:w-96 w-1/3 pointer-events-none;
     }
   }
-}
+} */
