--- a/src/index.css
+++ b/src/index.css
@@ -469,3 +469,89 @@ body {
     }
   }
 } */
+
+.video-tilt {
+  aspect-ratio: 1/1.5;
+
+  max-height: 700px;
+  transform: rotate(-5deg);
+}
+
+.phone-wrapperr {
+  mask: radial-gradient(
+    153.72% 107.68% at 20.35% -7.76%,
+    #fff 0% 75%,
+    #b39 100%
+  );
+
+  filter: blur(25px);
+  z-index: 15;
+}
+
+.phone {
+  position: relative;
+  z-index: 1;
+}
+
+.cc-animated-gradient {
+  background-image: linear-gradient(90deg, #a9cbff, #b39aff);
+  animation: gradientAnimation 4s ease forwards;
+  animation-delay: 0.26s;
+}
+
+/* 🚀 Gradient slideshow animation */
+@keyframes gradientAnimation {
+  0% {
+    background-image: linear-gradient(90deg, #a9cbff, #b39aff);
+  }
+  6.675% {
+    background-image: linear-gradient(90deg, #ffc46c, #83ff81);
+  }
+  13.35% {
+    background-image: linear-gradient(90deg, #aae0ff, #a3ffde);
+  }
+  20.025% {
+    background-image: linear-gradient(90deg, #adffa6, #f6ff90);
+  }
+  26.7% {
+    background-image: linear-gradient(90deg, #ffb6b6, #fff38d);
+  }
+  33.375% {
+    background-image: linear-gradient(90deg, #8cddff, #ffd3c6);
+  }
+  40.05% {
+    background-image: linear-gradient(90deg, #85bfff, #a0fff9);
+  }
+  46.725% {
+    background-image: linear-gradient(90deg, #ffcdc6, #ce9dff);
+  }
+  53.4% {
+    background-image: linear-gradient(90deg, #8cddff, #ffd3c6);
+  }
+  60.075% {
+    background-image: linear-gradient(90deg, #6deb82, #8df3f3);
+  }
+  66.75% {
+    background-image: linear-gradient(90deg, #fff19f, #fbc8b2);
+  }
+  73.425% {
+    background-image: linear-gradient(90deg, #85bfff, #a0fff9);
+  }
+  80.1% {
+    background-image: linear-gradient(90deg, #ffcdc6, #ce9dff);
+  }
+  86.775% {
+    background-image: linear-gradient(90deg, #85bfff, #a0fff9);
+  }
+  93.45% {
+    background-image: linear-gradient(90deg, #d4ff9c, #9ef9ff);
+  }
+  100% {
+    background-image: linear-gradient(90deg, #d4ff9c, #9ef9ff);
+  }
+}
+.cc-animated-gradient {
+  background-image: linear-gradient(90deg, #a9cbff, #b39aff);
+  animation: gradientAnimation 4s ease forwards;
+  animation-delay: 0.26s;
+}
